fix:deletet z-index in btn

--- a/shelter/main/styleMain.scss
+++ b/shelter/main/styleMain.scss
@@ -367,7 +367,6 @@ body {
 .pets__btn {
   margin: 0 auto;
   text-align: center;
-  z-index: 5;
 }
 
 .pets__inner__btn {
